3 line truncation fix
set 5em for 3 line truncation.

--- a/wp-content/themes/ecp/style.css
+++ b/wp-content/themes/ecp/style.css
@@ -758,7 +758,7 @@ ul.topnavigation li a:hover {
 
 .person-description .left {
     overflow: hidden;  
-    height: 5.6em;
+    height: 5em;
     width: 75%;
 }
 
